// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GenerateRecoveryPhrase /> should match snapshot 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  safeArea={true}
  style={
    Object {
      "backgroundColor": "#4A90E2",
      "flex": 1,
    }
  }
>
  <Image
    source={
      Object {
        "default": "RelativeImageStub",
      }
    }
    style={
      Array [
        Object {
          "flex": 1,
          "position": "absolute",
          "width": "100%",
        },
      ]
    }
  />
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={Object {}}
    >
      <Text
        allowFontScaling={false}
        numberOfLines={1}
        style={
          Array [
            Object {
              "fontSize": 17,
            },
            Object {
              "fontFamily": "System",
            },
            Object {
              "backgroundColor": "#333333",
              "color": "#ffffff",
            },
            null,
            null,
            Object {
              "backgroundColor": "transparent",
            },
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            Object {
              "alignSelf": "center",
              "fontSize": 20,
              "fontWeight": "600",
              "marginBottom": "2%",
            },
          ]
        }
      >
        Recovery Phrase generated
      </Text>
    </View>
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "fontSize": 17,
            },
            Object {
              "fontFamily": "System",
            },
            Object {
              "backgroundColor": "#333333",
              "color": "#ffffff",
            },
            null,
            Object {
              "textAlign": "center",
            },
            Object {
              "backgroundColor": "transparent",
            },
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            Object {
              "alignSelf": "center",
              "fontSize": 16,
              "fontWeight": "500",
              "lineHeight": 20,
              "marginBottom": 5,
              "paddingHorizontal": 20,
            },
          ]
        }
      >
        This is your Recovery Phrase. Write it down, and don't share it with anyone.
      </Text>
    </View>
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Image
        onLayout={[Function]}
        source={
          Object {
            "default": "RelativeImageStub",
          }
        }
        style={
          Array [
            Object {
              "marginBottom": 0,
              "resizeMode": "stretch",
              "width": "100%",
            },
          ]
        }
      />
      <View
        style={
          Object {
            "left": 20,
            "paddingHorizontal": "7%",
            "position": "absolute",
            "top": 20,
            "width": 320,
          }
        }
      >
        <Text
          accessibilityLabel="hello some passphrase"
          accessible={true}
          allowFontScaling={false}
          style={
            Array [
              Object {
                "fontSize": 17,
              },
              Object {
                "fontFamily": "System",
              },
              Object {
                "backgroundColor": "#333333",
                "color": "#ffffff",
              },
              null,
              null,
              Object {
                "backgroundColor": "transparent",
              },
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              Object {
                "color": "#4A90E2",
                "flexWrap": "wrap",
                "fontSize": 18,
                "fontWeight": "900",
                "lineHeight": 28,
                "textAlign": "center",
              },
            ]
          }
          testID="show-recovery-passphrase"
        >
          hello some passphrase
        </Text>
      </View>
    </View>
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "fontSize": 17,
            },
            Object {
              "fontFamily": "System",
            },
            Object {
              "backgroundColor": "#333333",
              "color": "#ffffff",
            },
            null,
            Object {
              "textAlign": "center",
            },
            Object {
              "backgroundColor": "transparent",
            },
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            Object {
              "alignSelf": "center",
              "fontSize": 16,
              "fontWeight": "bold",
              "lineHeight": 20,
              "paddingHorizontal": 20,
            },
          ]
        }
      >
        You will need this Recovery Phrase to restore from a backup. Keep it safe.
      </Text>
    </View>
  </View>
  <View
    style={Object {}}
  >
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "fontSize": 17,
            },
            Object {
              "fontFamily": "System",
            },
            Object {
              "backgroundColor": "#333333",
              "color": "#ffffff",
            },
            null,
            Object {
              "textAlign": "center",
            },
            Object {
              "backgroundColor": "transparent",
            },
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            Object {
              "fontSize": 14,
              "fontWeight": "bold",
              "lineHeight": 17,
              "marginBottom": "3%",
            },
          ]
        }
      >
        Are you sure you wrote it down?
      </Text>
    </View>
    <View
      style={
        Object {
          "borderRadius": 3,
          "marginLeft": 0,
          "marginRight": 0,
          "overflow": "hidden",
        }
      }
    >
      <View
        accessibilityLabel="submit-recovery-passphrase"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "busy": false,
            "disabled": false,
          }
        }
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "borderRadius": 5,
            "elevation": 7,
            "height": 48,
            "marginBottom": 15,
            "marginLeft": "2%",
            "marginRight": "2%",
            "opacity": 1,
            "shadowColor": "#777777",
            "shadowOffset": Object {
              "height": 1,
              "width": 1,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 5,
          }
        }
        testID="submit-recovery-passphrase"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderColor": "#2089dc",
              "borderRadius": 5,
              "borderWidth": 0,
              "color": "#4A90E2",
              "elevation": 7,
              "flexDirection": "row",
              "fontSize": 18,
              "fontWeight": "600",
              "height": 48,
              "justifyContent": "center",
              "marginBottom": 15,
              "marginLeft": "2%",
              "marginRight": "2%",
              "padding": 8,
              "shadowColor": "#777777",
              "shadowOffset": Object {
                "height": 1,
                "width": 1,
              },
              "shadowOpacity": 0.3,
              "shadowRadius": 5,
              "textAlign": "center",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "white",
                "fontSize": 18,
                "paddingBottom": 1,
                "paddingTop": 2,
                "textAlign": "center",
              }
            }
          >
            Continue
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`<GenerateRecoveryPhrase /> should match snapshot for error state 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  safeArea={true}
  style={
    Object {
      "backgroundColor": "#4A90E2",
      "flex": 1,
    }
  }
>
  <Image
    source={
      Object {
        "default": "RelativeImageStub",
      }
    }
    style={
      Array [
        Object {
          "flex": 1,
          "position": "absolute",
          "width": "100%",
        },
      ]
    }
  />
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={Object {}}
    >
      <Text
        allowFontScaling={false}
        numberOfLines={1}
        style={
          Array [
            Object {
              "fontSize": 17,
            },
            Object {
              "fontFamily": "System",
            },
            Object {
              "backgroundColor": "#333333",
              "color": "#ffffff",
            },
            null,
            null,
            Object {
              "backgroundColor": "transparent",
            },
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            Object {
              "alignSelf": "center",
              "fontSize": 20,
              "fontWeight": "600",
              "marginBottom": "2%",
            },
          ]
        }
      >
        Recovery Phrase generated
      </Text>
    </View>
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "fontSize": 17,
            },
            Object {
              "fontFamily": "System",
            },
            Object {
              "backgroundColor": "#333333",
              "color": "#ffffff",
            },
            null,
            Object {
              "textAlign": "center",
            },
            Object {
              "backgroundColor": "transparent",
            },
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            Object {
              "alignSelf": "center",
              "fontSize": 16,
              "fontWeight": "500",
              "lineHeight": 20,
              "marginBottom": 5,
              "paddingHorizontal": 20,
            },
          ]
        }
      >
        This is your Recovery Phrase. Write it down, and don't share it with anyone.
      </Text>
    </View>
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Image
        onLayout={[Function]}
        source={
          Object {
            "default": "RelativeImageStub",
          }
        }
        style={
          Array [
            Object {
              "marginBottom": 0,
              "resizeMode": "stretch",
              "width": "100%",
            },
          ]
        }
      />
      <View
        style={
          Object {
            "left": 20,
            "paddingHorizontal": "7%",
            "position": "absolute",
            "top": 20,
            "width": 320,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "fontSize": 17,
              },
              Object {
                "fontFamily": "System",
              },
              Object {
                "backgroundColor": "#333333",
                "color": "#ffffff",
              },
              null,
              Object {
                "textAlign": "center",
              },
              Object {
                "backgroundColor": "transparent",
              },
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              Object {
                "color": "#4A4A4A",
              },
              null,
              null,
            ]
          }
        >
          Uh oh... Looks like something went wrong.
        </Text>
      </View>
    </View>
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "fontSize": 17,
            },
            Object {
              "fontFamily": "System",
            },
            Object {
              "backgroundColor": "#333333",
              "color": "#ffffff",
            },
            null,
            Object {
              "textAlign": "center",
            },
            Object {
              "backgroundColor": "transparent",
            },
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            Object {
              "alignSelf": "center",
              "fontSize": 16,
              "fontWeight": "bold",
              "lineHeight": 20,
              "paddingHorizontal": 20,
            },
          ]
        }
      >
        You will need this Recovery Phrase to restore from a backup. Keep it safe.
      </Text>
    </View>
  </View>
  <View
    style={Object {}}
  >
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "fontSize": 17,
            },
            Object {
              "fontFamily": "System",
            },
            Object {
              "backgroundColor": "#333333",
              "color": "#ffffff",
            },
            null,
            Object {
              "textAlign": "center",
            },
            Object {
              "backgroundColor": "transparent",
            },
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            Object {
              "fontSize": 14,
              "fontWeight": "bold",
              "lineHeight": 17,
              "marginBottom": "3%",
            },
          ]
        }
      >
        Are you sure you wrote it down?
      </Text>
    </View>
    <View
      style={
        Object {
          "borderRadius": 3,
          "marginLeft": 0,
          "marginRight": 0,
          "overflow": "hidden",
        }
      }
    >
      <View
        accessibilityLabel="submit-recovery-passphrase"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "busy": false,
            "disabled": true,
          }
        }
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "borderRadius": 5,
            "elevation": 7,
            "height": 48,
            "marginBottom": 15,
            "marginLeft": "2%",
            "marginRight": "2%",
            "opacity": 1,
            "shadowColor": "#777777",
            "shadowOffset": Object {
              "height": 1,
              "width": 1,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 5,
          }
        }
        testID="submit-recovery-passphrase"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderColor": "#2089dc",
              "borderRadius": 5,
              "borderWidth": 0,
              "color": "#4A90E2",
              "elevation": 7,
              "flexDirection": "row",
              "fontSize": 18,
              "fontWeight": "600",
              "height": 48,
              "justifyContent": "center",
              "marginBottom": 15,
              "marginLeft": "2%",
              "marginRight": "2%",
              "opacity": 0.4,
              "padding": 8,
              "shadowColor": "#777777",
              "shadowOffset": Object {
                "height": 1,
                "width": 1,
              },
              "shadowOpacity": 0.3,
              "shadowRadius": 5,
              "textAlign": "center",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "hsl(208, 8%, 63%)",
                "fontSize": 18,
                "paddingBottom": 1,
                "paddingTop": 2,
                "textAlign": "center",
              }
            }
          >
            Continue
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`<GenerateRecoveryPhrase /> should match snapshot for loading state 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  safeArea={true}
  style={
    Object {
      "backgroundColor": "#4A90E2",
      "flex": 1,
    }
  }
>
  <Image
    source={
      Object {
        "default": "RelativeImageStub",
      }
    }
    style={
      Array [
        Object {
          "flex": 1,
          "position": "absolute",
          "width": "100%",
        },
      ]
    }
  />
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={Object {}}
    >
      <Text
        allowFontScaling={false}
        numberOfLines={1}
        style={
          Array [
            Object {
              "fontSize": 17,
            },
            Object {
              "fontFamily": "System",
            },
            Object {
              "backgroundColor": "#333333",
              "color": "#ffffff",
            },
            null,
            null,
            Object {
              "backgroundColor": "transparent",
            },
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            Object {
              "alignSelf": "center",
              "fontSize": 20,
              "fontWeight": "600",
              "marginBottom": "2%",
            },
          ]
        }
      >
        Recovery Phrase generated
      </Text>
    </View>
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "fontSize": 17,
            },
            Object {
              "fontFamily": "System",
            },
            Object {
              "backgroundColor": "#333333",
              "color": "#ffffff",
            },
            null,
            Object {
              "textAlign": "center",
            },
            Object {
              "backgroundColor": "transparent",
            },
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            Object {
              "alignSelf": "center",
              "fontSize": 16,
              "fontWeight": "500",
              "lineHeight": 20,
              "marginBottom": 5,
              "paddingHorizontal": 20,
            },
          ]
        }
      >
        This is your Recovery Phrase. Write it down, and don't share it with anyone.
      </Text>
    </View>
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Image
        onLayout={[Function]}
        source={
          Object {
            "default": "RelativeImageStub",
          }
        }
        style={
          Array [
            Object {
              "marginBottom": 0,
              "resizeMode": "stretch",
              "width": "100%",
            },
          ]
        }
      />
      <View
        style={
          Object {
            "padding": 40,
            "position": "absolute",
            "top": 0,
          }
        }
      />
    </View>
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "fontSize": 17,
            },
            Object {
              "fontFamily": "System",
            },
            Object {
              "backgroundColor": "#333333",
              "color": "#ffffff",
            },
            null,
            Object {
              "textAlign": "center",
            },
            Object {
              "backgroundColor": "transparent",
            },
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            Object {
              "alignSelf": "center",
              "fontSize": 16,
              "fontWeight": "bold",
              "lineHeight": 20,
              "paddingHorizontal": 20,
            },
          ]
        }
      >
        You will need this Recovery Phrase to restore from a backup. Keep it safe.
      </Text>
    </View>
  </View>
  <View
    style={Object {}}
  >
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "fontSize": 17,
            },
            Object {
              "fontFamily": "System",
            },
            Object {
              "backgroundColor": "#333333",
              "color": "#ffffff",
            },
            null,
            Object {
              "textAlign": "center",
            },
            Object {
              "backgroundColor": "transparent",
            },
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            Object {
              "fontSize": 14,
              "fontWeight": "bold",
              "lineHeight": 17,
              "marginBottom": "3%",
            },
          ]
        }
      >
        Are you sure you wrote it down?
      </Text>
    </View>
    <View
      style={
        Object {
          "borderRadius": 3,
          "marginLeft": 0,
          "marginRight": 0,
          "overflow": "hidden",
        }
      }
    >
      <View
        accessibilityLabel="submit-recovery-passphrase"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "busy": false,
            "disabled": true,
          }
        }
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "borderRadius": 5,
            "elevation": 7,
            "height": 48,
            "marginBottom": 15,
            "marginLeft": "2%",
            "marginRight": "2%",
            "opacity": 1,
            "shadowColor": "#777777",
            "shadowOffset": Object {
              "height": 1,
              "width": 1,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 5,
          }
        }
        testID="submit-recovery-passphrase"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderColor": "#2089dc",
              "borderRadius": 5,
              "borderWidth": 0,
              "color": "#4A90E2",
              "elevation": 7,
              "flexDirection": "row",
              "fontSize": 18,
              "fontWeight": "600",
              "height": 48,
              "justifyContent": "center",
              "marginBottom": 15,
              "marginLeft": "2%",
              "marginRight": "2%",
              "opacity": 0.4,
              "padding": 8,
              "shadowColor": "#777777",
              "shadowOffset": Object {
                "height": 1,
                "width": 1,
              },
              "shadowOpacity": 0.3,
              "shadowRadius": 5,
              "textAlign": "center",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "hsl(208, 8%, 63%)",
                "fontSize": 18,
                "paddingBottom": 1,
                "paddingTop": 2,
                "textAlign": "center",
              }
            }
          >
            Continue
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;
